@@ -1,0 +1,3 @@
+OLD USBasp Schematics
+
+enw will be uploaded soon, ZP
