@@ -6,7 +6,7 @@
  * Licence........: GNU GPL v2 (see Readme.txt)
  * Creation Date..: 2005-02-23
  * Last change....: 2005-04-20
- */
+ */ 
 
 #include <inttypes.h>
 #include <avr/io.h>
