@@ -25,7 +25,7 @@ the output and a memory block to dump in hex ('data' and 'len').
 
 
 #ifndef F_CPU
-#   define  F_CPU   12000000    /* 12 MHz */
+#   define  F_CPU   16000000    /* 12 MHz */	//ZP
 #endif
 
 /* make sure we have the UART defines: */
